crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__sequences_tests__named_node_with_child_remains_tree.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/sequences_tests.rs
---
Q = (foo (bar))
---
Root
  Def
    Id "Q"
    Equals "="
    Tree
      ParenOpen "("
      Id "foo"
      Tree
        ParenOpen "("
        Id "bar"
        ParenClose ")"
      ParenClose ")"
