crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__sequences_tests__sequence_in_named_node.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/sequences_tests.rs
---
Q = (block {(statement) (statement)})
---
Root
  Def
    Id "Q"
    Equals "="
    Tree
      ParenOpen "("
      Id "block"
      Seq
        BraceOpen "{"
        Tree
          ParenOpen "("
          Id "statement"
          ParenClose ")"
        Tree
          ParenOpen "("
          Id "statement"
          ParenClose ")"
        BraceClose "}"
      ParenClose ")"
