crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__sequences_tests__sequence_single_element.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/sequences_tests.rs
---
Q = {(identifier)}
---
Root
  Def
    Id "Q"
    Equals "="
    Seq
      BraceOpen "{"
      Tree
        ParenOpen "("
        Id "identifier"
        ParenClose ")"
      BraceClose "}"
