crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__sequences_tests__sequence_with_alternation.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/sequences_tests.rs
---
Q = {[(a) (b)] (c)}
---
Root
  Def
    Id "Q"
    Equals "="
    Seq
      BraceOpen "{"
      Alt
        BracketOpen "["
        Branch
          Tree
            ParenOpen "("
            Id "a"
            ParenClose ")"
        Branch
          Tree
            ParenOpen "("
            Id "b"
            ParenClose ")"
        BracketClose "]"
      Tree
        ParenOpen "("
        Id "c"
        ParenClose ")"
      BraceClose "}"
