crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__sequences_tests__simple_sequence.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/sequences_tests.rs
---
Q = {(a) (b)}
---
Root
  Def
    Id "Q"
    Equals "="
    Seq
      BraceOpen "{"
      Tree
        ParenOpen "("
        Id "a"
        ParenClose ")"
      Tree
        ParenOpen "("
        Id "b"
        ParenClose ")"
      BraceClose "}"
